# ENCODE-DECODE-FILE

./: README.md
libs/: libbmp.c
src/: .gitignore  CMakeLists.txt  Makefile  function.c  function.cpp  function.h  main.c  main.cpp  mainInMemory.cpp  mem.cpp  mem.h
src/c/: Makefile  function.h
src/c-version/: README.md  main.c
src/c/libs/: libbmp.h
src/c/output/: main
src/cpp/: CMakeLists.txt  HOW_TO_RUN.md  Makefile  encoderDecoder  function.cpp  function.h  main.cpp
src/cpp/decodedFiles/: teste
src/cpp/output/: main
src/cpp/teste/: CMakeLists.txt  lerImagem  main.cpp  teste  teste.cpp
src/output/: main
